--- a/index.html
+++ b/index.html
@@ -23,9 +23,21 @@
     </div>
 
     <script type="text/javascript">
-        /**
-         * Sorunun cevabını bu yorumdan sonra yazınız.
-         */
+        
+        var a,b,c,d;
+        c=1;
+        document.write("9-1 arası bir rakam giriniz");
+        a=pront(document.read(a));
+        d=a;
+        if a=>9 & a=<1
+        (
+            for (b=1; b<a; b++)
+        d=d*b;
+        )
+        else
+            (
+                document.write("sayı 1-9 arasında değildir.");
+            )
 
 
     </script>
