--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <script type="text/javascript">
         var a,b,c;
         
-        for (a=1; a<10; a++)
+        for (a=1; a<=10; a++)
         {
-            for(b=1; b<10; b++)
+            for(b=1; b<=10; b++)
             {
                 c=a*b;
                 print(c);
